--- a/Contacto.html
+++ b/Contacto.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>imagencies</title>
+	<title>Contacto</title>
 	<meta charset="utf-8">
 	<meta name="autor" content="#RHZY!">
 	<meta name="keywords" content="agencia, marketing">
@@ -72,7 +72,7 @@
 		<h2>Contactanos</h2>
 
 
-<p>		¡Comencemos a elaborar una estrategia de marketing enfocada en impulsar el crecimiento de tu marca en los canales digitales!
+<p>		¡Comencemos a elaborar una estrategia de marketing enfocada en impulsar el crecimiento de tu marca en los canales digitales! |
 		</p>
 
 </article>
@@ -129,34 +129,43 @@
 			</ul>
 		</div>
 	</section>
-	<div class="mapa">
-		<img src="img/WorldMap.svg">
-	</div>
 
+<article class="form" data-aos="fade-right">
+	
 
-	<section class="formulario">
-				<div>
-					<h5>	Si tiene alguna pregunta, no dude en enviarnos un mensaje.</h5>
-				</div>
-				<form>
-					
-					<div class="two">
-					<input type="text" name="Nombre" placeholder="Nombre">
+		<h4>¡Crea tu identidad!</h4>
+	
+		<div class="div-form">
 
+		<div class="info">
+			<h4>Información de contacto</h4>
+			<p>Correo: digitalmarketin@gmail com
+			<br>Numero: +58 424-334-5211</p>
+			<img src="img/subscr1.png">
 
-					<input type="text" name="Apellido" placeholder="Apellido">
+		</div>
 
-					</div>
-					<div class="two">
-					<input type="mailto" name="Correo" placeholder="Correo Electronico">
-					<input type="number" name="NUmero" placeholder="Numero de Telefono">
-					</div>
+		<div class="foww">
+		<form>
+			<h5>Envianos un mensaje</h5>
 
-					<input  class="mensaje" type="text" name="Nombre"placeholder="Dejanos saber sobre tu duda o comentario">
-					<input class="enviar" type="submit" name="">
+			<label>Nombres*</label>
+			<input type="text" name="NAme"class="f">
+			<label>Telefono/Celular</label>
+			<input type="number" name="numero">
+			<label>Correo electronico*</label>
+			<input type="email" name="Correo" >
+			<label>Mensaje*</label>
+			<textarea  name="mensaje"></textarea>
 
-				</form>
+			<input id="Enviar" type="submit" name="Enviar" placeholder="Enviar"
+			class="boton-f">
 
+		</form>
+		</div>
+		</div>
+
+</article>
 
 
 
