--- a/Nosotros.html
+++ b/Nosotros.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<title>imagencies</title>
+	<title> Sobre Nosotros</title>
 	<meta charset="utf-8">
 	<meta name="autor" content="#RHZY!">
 	<meta name="keywords" content="agencia, marketing">
@@ -69,9 +69,12 @@
 		<div class="flex-nosotros">	
 
 		<article class="mensaje"  data-aos="zoom-in-right">
-		<h2>Sobre nosotros</h2>
+		
+		<span>Conoce nuestra Agencia</span>
+		<h2>Sobre Nosotros</h2>
 		<p>
-Somos una agencia de marketing , nos dedicamos a impulsar el crecimiento de negocios mediante estrategias de contenidos creativos y de valor para los consumidores.</p>
+Somos Im Agencies, una agencia de marketing digital ubicada en Turmero estado Aragua, nos dedicamos a impulsar el crecimiento de negocios mediante estrategias de contenidos creativos y de impacto para los consumidores.
+</p>
 
 </article>
 
@@ -83,22 +86,81 @@ Somos una agencia de marketing , nos dedicamos a impulsar el crecimiento de nego
     	<i class="fa fa-whatsapp"></i> </a>
   	</div>
 
-<div class="somos">
-
+<section class="somos">
+	<article>
+<div class="quienes-somos">
 <h3>¿Quiénes somos?</h3>
 <p>
-Somos Im Agencies, una agencia de marketing digital ubicada en Turmero estado Aragua, nos dedicamos a impulsar el crecimiento de negocios mediante estrategias de contenidos creativos y de valor impacto para los consumidores.
-
-<br>
 <br>
 Nos apoyamos en la metodología de Inbound Marketing, un enfoque estratégico para crear contenido valioso alineada con las necesidades del público objetivo e inspire relaciones a largo plazo con los clientes.
-</p>
+</div>
+
+<div class="quienes-img">
+
+</div>
+
+</article>
+
+
+</section>
+
+<section>
+	<img src="">
+</section>
+
 </div>
 
 
+<section class="servicos-nosotros">
+	<article>
+		<h4>Servicios</h4>
+		<p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+	</article>	
+
+	<article class="servicos-nosotros-img">
+		<div>
+			<figure><img src="img/servicio1.jpg"></figure>
+			<p></p>
+		</div>
+
+
+		<div>
+			<figure><img src="img/servicio1.jpg"></figure>
+			<p></p>
+		</div>
+
+
+		<div>
+			<figure><img src="img/servicio1.jpg"></figure>
+			<p></p>
+		</div>
+
+
+		<div>
+			<figure><img src="img/servicio1.jpg"></figure>
+			<p></p>
+		</div>
+
+
+		<div>
+			<figure><img src="img/servicio1.jpg"></figure>
+			<p></p>
+		</div>
+
+
+		<div>
+			<figure><img src="img/servicio1.jpg"></figure>
+			<p></p>
+		</div>
+	</article>
+
+</section>
+
+
+
 <img  class="img-fnd" src="img/fond.jpg">
-
-
 
 
 
@@ -111,7 +173,7 @@ Nos apoyamos en la metodología de Inbound Marketing, un enfoque estratégico pa
 	</div>
 	<p>
 	Comunícate con nosotros para comenzar a diseñar una estrategia digital orientada a impulsar el crecimiento de tu marca en la web</p>
-
+	
 	
 	<div class="contas">
 	<i  class="fa fa-whatsapp"></i>
