--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<h1>
 			Conectando marcas con el <b> mundo digital.</b>
 		</h1>
-			<a href="Sobre-Nosotros.html">
+			<a href="nosotros.html">
 		<p><b>+7</b> Años en el mercado!</p>
 	
 		</a>
