--- a/Contacto.html
+++ b/Contacto.html
@@ -38,7 +38,7 @@
 					<a href="https://imagencies.netlify.app"
 					aria-label="agencia de marketing">  Inicio </a>
 					<a href="Nosotros.html"> Nosotros </a>
-
+					<a href="Nosotros.html">Servicios </a>
 					<a href="contacto.html">Contacto </a>
 					<a id="numero" href="https://wa.me/+584243005971">+58 424-300-5971 </a>
 
@@ -55,6 +55,7 @@
 			<nav class="enlaces">
 			<a href="https://imagencies.netlify.app">Inicio </a>
 			<a href="nosotros.html">Nosotros </a>
+					<a href="Nosotros.html">Servicios </a>
 			<a href="contacto.html">Contacto </a>
 			</nav>
 			
