--- a/Nosotros.html
+++ b/Nosotros.html
@@ -38,7 +38,7 @@
 					<a href="https://imagencies.netlify.app"
 					aria-label="agencia de marketing">  Inicio </a>
 					<a href="nosotros.html"> Nosotros </a>
-
+					<a href="Nosotros.html">Servicios </a>
 					<a href="contacto.html">Contacto </a>
 					<a id="numero" href="https://wa.me/+584243005971">+58 424-300-5971 </a>
 
@@ -55,6 +55,7 @@
 			<nav class="enlaces">
 			<a href="https://imagencies.netlify.app">Inicio </a>
 			<a href="nosotros.html">Nosotros </a>
+					<a href="Nosotros.html">Servicios </a>
 			<a href="contacto.html">Contacto </a>
 			</nav>
 			
@@ -123,6 +124,19 @@ Nos apoyamos en la metodología de Inbound Marketing, un enfoque estratégico pa
 		<div>
 			<figure><img src="img/servicio1.jpg"></figure>
 			<p></p>
+		</div>
+		<div>
+			<p> consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit ess</p>
+		</div>
+
+		<div>
+			<p> consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit ess</p>
 		</div>
 
 
