--- a/Nosotros.html
+++ b/Nosotros.html
@@ -38,8 +38,8 @@
 					<a href="https://imagencies.netlify.app"
 					aria-label="agencia de marketing">  Inicio </a>
 					<a href="nosotros.html"> Nosotros </a>
-					<a href="Nosotros.html">Servicios </a>
-					<a href="contacto.html">Contacto </a>
+					<a href="Nosotros.html#servicos">Servicios </a>
+					<a href="Nosotros.html">Contacto </a>
 					<a id="numero" href="https://wa.me/+584243005971">+58 424-300-5971 </a>
 
 				</ul>
@@ -55,12 +55,12 @@
 			<nav class="enlaces">
 			<a href="https://imagencies.netlify.app">Inicio </a>
 			<a href="nosotros.html">Nosotros </a>
-					<a href="Nosotros.html">Servicios </a>
+			<a href="Nosotros.html#servicos">Servicios </a>
 			<a href="contacto.html">Contacto </a>
 			</nav>
 			
 			
-		<label for="btn-men" >
+		<label for="btn-menu" >
 		<i id="boton" class="fa fa-times"></i></div></label>
 		
 		</div>
@@ -89,16 +89,22 @@ Somos Im Agencies, una agencia de marketing digital ubicada en Turmero estado Ar
 
 <section class="somos">
 	<article>
-<div class="quienes-somos">
-<h3>¿Quiénes somos?</h3>
-<p>
-<br>
-Nos apoyamos en la metodología de Inbound Marketing, un enfoque estratégico para crear contenido valioso alineada con las necesidades del público objetivo e inspire relaciones a largo plazo con los clientes.
-</div>
 
 <div class="quienes-img">
 
 </div>
+
+<div class="quienes-somos">
+<span>A que nos dedicamos</span>	
+<p class="buenos"><b>Buenos</b> diseños
+<br>
+<b>Buenos</b> negocios</p>
+
+<h4>Sabemos que los buenos diseños significan buenos negocios.</h4>
+<p>
+	Trabajamos en estrecha colaboración con nuestros clientes para asegurarnos de que su presencia digital transmita el mensaje correcto y cautiven a su público objetivo.
+</div>
+
 
 </article>
 
@@ -113,71 +119,119 @@ Nos apoyamos en la metodología de Inbound Marketing, un enfoque estratégico pa
 
 
 <section class="servicos-nosotros">
-	<article>
-		<h4>Servicios</h4>
-		<p>ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-	</article>	
+		<div class="servicos-texto">
+		<span id="servicos">Servicios</span>	
+		<h4> Las mejores soluciones para ti</h4>
+		<p>Ofrecemos servicios de diseño y desarrollo a startups y pequeñas empresas que buscan un socio en el ámbito digital. Nuestro enfoque se centra en generar comunicación efectiva y cubrir los requisitos necesarios. Trabajamos con usted, no para usted, para asegurarnos de obtener los mejores resultados.</p>
+	</div>
 
-	<article class="servicos-nosotros-img">
+		<div class="servicos-nosotros-img">
 		<div>
-			<figure><img src="img/servicio1.jpg"></figure>
-			<p></p>
+		<figure><img src="img/servicio1.jpg">
+				<div class="capa">
+					<h4>Social Media Marketing.</h4>
+<p>
+Potencia tu estrategia en Redes Sociales manteniendo una conexión sólida con tus clientes.</p>
+				</div>
+			</figure>
+
+
+		<figure><img src="img/servicio2.jpg">
+				<div class="capa">
+				</div>
+			</figure>
+			
+
+		<figure><img src="img/servicio3.jpg">
+				<div class="capa">
+					<p><b>					Asesorias.</b>
+						<br>
+				<br>Analizamos las oportunidades de crecimiento de tu negocio y trabajamos en fortalecer tus debilidades.</p>
+				</div>
+			</figure>		
+		
 		</div>
 		<div>
-			<p> consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit ess</p>
+		<figure class="up"><img src="img/servicio6.png">
+			<div class="capa">
+				<p><b>Desarrollo web.</b>
+					<br><br>
+Creamos sitios web adaptativos diseñados para una experiencia óptima en cualquier dispositivo.</p>
+				</div>
+			</figure>
+
+
+		<figure><img src="img/servicio4.jpg">
+				<div class="capa">
+				<p>dkaldklakdlakdSDkls/p>
+				</div>
+			</figure>
+			
+		
+		<figure><img src="img/servicio5.jpg">
+				<div class="capa">
+			<p><b>Diseño Grafico</b>
+						<br>		
+Creamos proyectos a medida, diseñados de forma personalizada según tus necesidades y objetivos.</p>
+				</div>
+			</figure>		
+		</div>
 		</div>
 
-		<div>
-			<p> consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit ess</p>
-		</div>
-
-
-		<div>
-			<figure><img src="img/servicio1.jpg"></figure>
-			<p></p>
-		</div>
-
-
-		<div>
-			<figure><img src="img/servicio1.jpg"></figure>
-			<p></p>
-		</div>
-
-
-		<div>
-			<figure><img src="img/servicio1.jpg"></figure>
-			<p></p>
-		</div>
-
-
-		<div>
-			<figure><img src="img/servicio1.jpg"></figure>
-			<p></p>
-		</div>
-
-
-		<div>
-			<figure><img src="img/servicio1.jpg"></figure>
-			<p></p>
-		</div>
-	</article>
-
+	
 </section>
 
 
+<article class="last">
+	<div>
+		
+<span>A que nos dedicamos</span>	
+<p class="buenos"><b>Buenos</b> diseños
+	</div>
 
-<img  class="img-fnd" src="img/fond.jpg">
+	<section class="last-video">
 
 
+		<figure>
 
+      <video id="videoClase"
+            controls=" "  
+      autoplay loop poster muted ="portada.jpg">
+  <source src="img/video4.mp4" type="video/mp4"></source>
+			<p></p>
+		</figure>
+
+		<figure>
+      <video id="videoClase" 
+      autoplay loop poster muted ="portada.jpg">
+  <source src="img/video3.mp4" type="video/mp4"></source>
+			<p></p>
+		</figure>
+
+
+		<figure>
+
+      <video id="videoClase"
+      autoplay loop poster muted ="portada.jpg">
+  <source src="img/video2.mp4" type="video/mp4"></source>
+
+			<p></p>
+		</figure>
+
+
+		<figure>
+
+      <video id="videoClase" 
+      controls=" " 
+      autoplay loop poster muted  ="portada.jpg">
+  <source src="img/video1.mp4" type="video/mp4"></source>
+  Tu navegador no soporta HTML5 video.
+			<p></p>
+		</figure>
+
+	</section>
+
+</article>
 
 
 			
@@ -195,7 +249,6 @@ Nos apoyamos en la metodología de Inbound Marketing, un enfoque estratégico pa
 	+58 424-334-5211 </a>
 </div>
 </section>
-
 
 
 
