--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>imagencies</title>
+	<title>IM Agencies |
+Connecting brands with the digital world🌍</title>
 	<meta charset="utf-8">
 	<meta name="autor" content="#RHZY!">
 	<meta name="keywords" content="agencia, marketing">
@@ -14,22 +15,20 @@
 	
 	 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-	 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	 <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
 </head>
 <body>
 <header class="head">
 	<div class="contenedor">
-
-
 			<div class="menu">
 			<div class="logo">
 			<a aria-label="agencia de marketing" href="https://imagencies.netlify.app">
 			 <img src="img/logo1.png" alt="logo-im-agencies"> 
-			<h1>Agencies</h1></a>
+			<h1>Agencies. </h1></a>
 			</div>
 			<div>
 				<ul>
-
 					<a href="https://imagencies.netlify.app"
 					aria-label="agencia de marketing">  Inicio </a>
 					<a href="Nosotros.html"> Nosotros </a>
@@ -55,16 +54,13 @@
 			<a href="Nosotros.html">Nosotros </a>
 			<a href="Nosotros.html">Servicios </a>
 			<a href="Contacto.html">Contacto </a>
-			</nav>
-			
-			
+			</nav>			
 		<label for="btn-menu" >
 		<i id="boton" class="fa fa-times"></i></div></label>
 		
 		</div>
 		</DIV>
 
-		
 		<div class="flex">	
 		<article class="mensaje"  data-aos="fade-down">
 		<h1>
@@ -75,9 +71,10 @@
 	
 		</a>
 		</article>
+		<!---
 		<article>
 			<img src="img/social.png">
-		</article>
+		</article>---->
 	</div>
 </header>
 
@@ -141,6 +138,7 @@ El marketing digital es un modelo innovador que se adapta a las necesidades del 
 			<li data-aos="fade-right">Medición y análisis</li>
 			<li data-aos="fade-right">objetivo cuantificable</li>
 			<li data-aos="fade-right">Segmentación precisa:</li>
+			<li data-aos="fade-right">Medición y análisis</li>
 			</ul>
 		</div>
 	</article>
@@ -308,7 +306,7 @@ El marketing digital es un modelo innovador que se adapta a las necesidades del 
 
 			</ul>
 
-		</div>	
+		</div>	on2
 	</div>
 </div>
 
@@ -355,12 +353,6 @@ El marketing digital es un modelo innovador que se adapta a las necesidades del 
 </article>
 
 
-
-
-
-
-
-			
 
 <section class="con2" data-aos="zoom-out-left">
 	<div class="cont">
@@ -457,10 +449,9 @@ El marketing digital es un modelo innovador que se adapta a las necesidades del 
 	<div class="grupo2-1">
 		
 
-	 	<a href="https://suburbiodeideas.netlify.app"> &copy; 2023 Suburbio de ideas
+	 	<a href="https://suburbiodeideas.netlify.app"> &copy; 2024 Suburbio de ideas
 	 	</a>
-	 	<p>Disclaimer: </p>
-	 	<p>La propiedad inteletual de los sitos usados para el portafolio solo es para inspriracion , los derechos de imagen pertenecen a las entidades  </p>
+	 	<p>Disclaimer : La propiedad inteletual de los sitos usados para el portafolio solo es para inspriracion , los derechos de imagen pertenecen a las entidades  </p>
 	 </div>
 
 	</div>
