--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@ Connecting brands with the digital world🌍</title>
 </head>
 <body>
 <header class="head">
+	
+	<section class="top">
+		
+		<a id="numero" href="https://wa.me/+584243005971"> <i class="fa fa-mobile" aria-hidden="true"></i> +58 424-300-5971 </a>
+
+		
+		<i id="boton" class="fa fa-bars"></i>ajdkajdkjakdj</div></label>
+
+	</section>
 	<div class="contenedor">
+
 			<div class="menu">
 			<div class="logo">
 			<a aria-label="agencia de marketing" href="https://imagencies.netlify.app">
@@ -29,12 +39,13 @@ Connecting brands with the digital world🌍</title>
 			</div>
 			<div>
 				<ul>
-					<a href="https://imagencies.netlify.app"
-					aria-label="agencia de marketing">  Inicio </a>
+					<a href="index.html"
+					aria-label="agencia de marketing"
+					id="Inicio">  Inicio </a>
 					<a href="Nosotros.html"> Nosotros </a>
 					<a href="Nosotros.html">Servicios </a>
 					<a href="contacto.html">Contacto </a>
-					<a id="numero" href="https://wa.me/+584243005971">+58 424-300-5971 </a>
+					
 
 				</ul>
 			</div>
@@ -50,7 +61,7 @@ Connecting brands with the digital world🌍</title>
 		<img id="flex" src="img/logo1.png" alt="logo-im-agencies"> </a>	
 			
 			<nav class="enlaces">
-			<a href="https://imagencies.netlify.app">Inicio </a>
+			<a href="index.html">Inicio </a>
 			<a href="Nosotros.html">Nosotros </a>
 			<a href="Nosotros.html">Servicios </a>
 			<a href="Contacto.html">Contacto </a>
@@ -63,9 +74,10 @@ Connecting brands with the digital world🌍</title>
 
 		<div class="flex">	
 		<article class="mensaje"  data-aos="fade-down">
-		<h1>
+		<h2>
 			Conectando marcas con el <b> mundo digital.</b>
-		</h1>
+		</h2>
+		<h3>We Build the future</h3>
 			<a href="nosotros.html">
 		<p><b>+7</b> Años en el mercado!</p>
 	
