--- a/index.html
+++ b/index.html
@@ -20,15 +20,29 @@ Connecting brands with the digital world🌍</title>
 </head>
 <body>
 <header class="head">
-	
+			
 	<section class="top">
-		
-		<a id="numero" href="https://wa.me/+584243005971"> <i class="fa fa-mobile" aria-hidden="true"></i> +58 424-300-5971 </a>
+	<article>	
+		<div class="conta">
+			<a id="numero" href="https://wa.me/+584243005971"> <i class="fa fa-mobile" aria-hidden="true"></i>+58 424-300-5971 </a>
 
-		
-		<i id="boton" class="fa fa-bars"></i>ajdkajdkjakdj</div></label>
+			<a href="mailto:Info@imagencie.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>Info@imagencie.com
+</a>
 
+		<a href=""><i class="fa fa-globe" aria-hidden="true"></i> Venezuela
+		</a>
+
+		</div>	
+<div class="REDES-S"> 
+		<a href="https://www.facebook.com/IMAgencies/"><i class="fa fa-facebook"></i></a>
+		<a href="https://www.linkedin.com/company/im-agencies/?originalSubdomain=mx"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+		<a href="https://www.instagram.com/imagencies/"> <i class="fa fa-instagram"></i></a>
+		<a href=""><i class="fa fa-whatsapp"></i></a>
+</div>
+	</article>
 	</section>
+		<i id="boton" class="fa fa-bars"></i></div></label>
+
 	<div class="contenedor">
 
 			<div class="menu">
@@ -78,9 +92,8 @@ Connecting brands with the digital world🌍</title>
 			Conectando marcas con el <b> mundo digital.</b>
 		</h2>
 		<h3>We Build the future</h3>
-			<a href="nosotros.html">
-		<p><b>+7</b> Años en el mercado!</p>
-	
+		<a href="nosotros.html">
+		<b>+7</b> Años en el mercado!
 		</a>
 		</article>
 		<!---
@@ -315,10 +328,8 @@ El marketing digital es un modelo innovador que se adapta a las necesidades del 
 			<a href="https://jccanampr.com">
 			<li><img src="img/ico5.png"></li></a>
 
-
 			</ul>
-
-		</div>	on2
+		</div>
 	</div>
 </div>
 
@@ -367,18 +378,14 @@ El marketing digital es un modelo innovador que se adapta a las necesidades del 
 
 
 <section class="con2" data-aos="zoom-out-left">
-	<div class="cont">
-		<h5 id="c">¡Aumenta tus ventas!</h5>
-	</div>
+	<h5 id="c">¡Aumenta tus ventas!</h5>
 	<p>
-	Comunícate con nosotros para comenzar a diseñar una estrategia digital orientada a impulsar el crecimiento de tu marca en la web</p>
-
-	
+	Comunícate con nosotros para comenzar a diseñar una estrategia digital orientada a impulsar el crecimiento de tu marca en la web</p>	
 	<div class="contas">
 	<i  class="fa fa-whatsapp"></i>
 		<a  href="https://wa.me/+584243345211">
 	+58 424-334-5211 </a>
-</div>
+	</div>
 </section>
 
 
@@ -409,6 +416,8 @@ El marketing digital es un modelo innovador que se adapta a las necesidades del 
 		<a href="https://www.linkedin.com/company/im-agencies/?originalSubdomain=mx"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
 		<a href="https://www.instagram.com/imagencies/"> <i class="fa fa-instagram"></i></a>
 		<i class="fa fa-whatsapp"></i>
+
+
 		</ul>
 	</div>
 <div class="footer-servicios">
