--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Connecting brands with the digital world🌍</title>
 		</h2>
 		<h3>We Build the future</h3>
 		<a href="nosotros.html">
-		<b>+7</b> Años en el mercado!
+		<p>+7</p> Años en el mercado!
 		</a>
 		</article>
 		<!---
@@ -161,7 +161,6 @@ El marketing digital es un modelo innovador que se adapta a las necesidades del 
 			<li data-aos="fade-right">Flexibilidad y escalabilidad:</li>
 			<li data-aos="fade-right">Interacción y feedback en tiempo real</li>
 			<li data-aos="fade-right">Medición y análisis</li>
-			<li data-aos="fade-right">objetivo cuantificable</li>
 			<li data-aos="fade-right">Segmentación precisa:</li>
 			<li data-aos="fade-right">Medición y análisis</li>
 			</ul>
