--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>IM Agencies |
-Connecting brands with the digital world🌍</title>
-	<meta charset="utf-8">
+
+<title>IMAGENCIES – Connecting brands with the digital world</title>	<meta charset="utf-8">
 	<meta name="autor" content="#RHZY!">
 	<meta name="keywords" content="agencia, marketing">
 	<meta name="description" content="marketing digital">
@@ -89,9 +88,9 @@ Connecting brands with the digital world🌍</title>
 		<div class="flex">	
 		<article class="mensaje"  data-aos="fade-down">
 		<h2>
-			Conectando marcas con el <b> mundo digital.</b>
+		We Build the <b>future.</b>
 		</h2>
-		<h3>We Build the future</h3>
+		<h3>Connecting brands with the digital world</h3>
 		<a href="nosotros.html">
 		<p>+7</p> Años en el mercado!
 		</a>
@@ -374,7 +373,7 @@ El marketing digital es un modelo innovador que se adapta a las necesidades del 
 	</div>
 </article>
 
-
+<!----
 
 <section class="con2" data-aos="zoom-out-left">
 	<h5 id="c">¡Aumenta tus ventas!</h5>
@@ -386,7 +385,7 @@ El marketing digital es un modelo innovador que se adapta a las necesidades del 
 	+58 424-334-5211 </a>
 	</div>
 </section>
-
+--->
 
 
 <article class="cite">
