--- a/index.html
+++ b/index.html
@@ -144,14 +144,12 @@ Descubre cómo podemos impulsar tu negocio.
 	<article class="serv-a" data-aos="zoom-in">
 		<div>
 			<p>Una estrategia de performance inteligente convierte tu sitio web y tus redes sociales en poderosas herramientas para generar ingresos, implementando las estrategias adecuadas y logrando que tu negocio despegue.
+			<br>
+			<br>
 
-			<br>
-			<br>
 			<b>¿Cómo te beneficiará el marketing digital?</b>
-			<br> 
-El marketing digital es un modelo innovador que se adapta a las necesidades del mercado y ofrece beneficios significativos para la estrategia de cualquier empresa.	<br>
-			
-			</p>
+			<br> El marketing digital es un modelo innovador que se adapta a las necesidades del mercado y ofrece beneficios significativos para la estrategia de cualquier empresa.	
+			<br></p>
 		</div>
 		<div>
 			<ul>
@@ -169,9 +167,8 @@ El marketing digital es un modelo innovador que se adapta a las necesidades del 
 
 	<section class="ser">
 		<h3>Marketing inteligente para desafíos únicos</h3>
-
-
 		<p>Ofrecemos soluciones digitales personalizadas que están diseñadas para mejorar y potenciar tu negocio, aumentando su eficiencia en el entorno digital.</p>
+		
 	<div class="serv">
 		<div class="servicio"data-aos="fade-down"
      data-aos-easing="linear"
