--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="agencia, marketing">
 	<meta name="description" content="marketing digital">
 	<!---css---->	
-	<link rel="stylesheet" href="css.css">
+	<link rel="stylesheet" href="Style/css.css">
 	<!---icon ---->
 	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	 <link rel="icon"href="img/logo1.png">
@@ -56,17 +56,16 @@
 					aria-label="agencia de marketing"
 					id="Inicio">  Inicio </a>
 					<a href="Nosotros.html"> Nosotros </a>
-					<a href="Nosotros.html">Servicios </a>
-					<a href="contacto.html">Contacto </a>
+					<a href="Servicios.html">Servicios </a>
+					<a href="Contacto.html">Contacto </a>
 					
 
 				</ul>
 			</div>
-			</div>
-		<label for="btn-menu">
-		<i id="boton" class="fa fa-bars"></i></div></label>
-
+			</div>		
+			<label for="btn-menu">		<i id="boton" class="fa fa-bars"></i></div></label>
 		<DIV>
+			
 		<input type="checkbox" id="btn-menu">	
 		<div class="menu-desplegable">
 		
@@ -87,12 +86,12 @@
 
 		<div class="flex">	
 		<article class="mensaje"  data-aos="fade-down">
-		<h2>
+		<h4>
 		We Build the <b>future.</b>
-		</h2>
+		</h4>
 		<h3>Connecting brands with the digital world</h3>
 		<a href="nosotros.html">
-		<p>+7</p> Años en el mercado!
+		<b> +9</b> Años en el mercado!
 		</a>
 		</article>
 		<!---
@@ -189,23 +188,18 @@ Descubre cómo podemos impulsar tu negocio.
 			<p>Creamos sitios web adaptativos diseñados para una experiencia óptima en cualquier dispositivo.</p>
 		</div>
 
-
 		<div class="servicio"data-aos="fade-down"
      data-aos-easing="linear"
      data-aos-duration="1500">
-
 			<i class="fa fa-rss-square" aria-hidden="true"></i>
 			<h4>Asesorias.</h4>
 			<p>Analizamos las oportunidades de crecimiento de tu negocio y trabajamos en fortalecer tus debilidades.</p>
 		</div>
 
-
 		<div class="servicio"data-aos="fade-down"
      data-aos-easing="linear"
      data-aos-duration="1500">
-			
-			<i class="fa fa-pencil-square-o"></i>
-				
+			<i class="fa fa-pencil-square-o"></i>				
 			<h4>Diseño Grafico </h4>
 			<p>Creamos proyectos a medida, diseñados de forma personalizada según tus necesidades y objetivos.</p>
 		</div>
@@ -231,10 +225,6 @@ Descubre cómo podemos impulsar tu negocio.
 		</div>
 
 	</div >
-
-
-
-
 	</section>
 	<section class="metodologia">
 		
@@ -252,7 +242,6 @@ Descubre cómo podemos impulsar tu negocio.
 			</ol>
 			</div>
 
-
 		<div data-aos="fade-right"
      data-aos-offset="40"
      data-aos-easing="ease-in-sine">
@@ -264,25 +253,25 @@ Descubre cómo podemos impulsar tu negocio.
 		<article class="tiempo">
 		<div data-aos="fade-up"
      data-aos-duration="500"> 	
-			<i class="fa fa-road" aria-hidden="true"> <p>7 </p></i>
+			<i class="fa fa-road" aria-hidden="true"> <p>+8 </p></i>
 			<p>Años de Experiencia.</p>
 		</div>	
 
 		<div data-aos="fade-up"
      data-aos-duration="500"> 	
-			<i class="fa fa-suitcase" aria-hidden="true"><p>100</p></i>
+			<i class="fa fa-suitcase" aria-hidden="true"><p>+100</p></i>
 			<p>Proyectos Terminados</p>
 		</div>	
 
 		<div data-aos="fade-up"
      data-aos-duration="500"> 	
-			<i class="fa fa-map-signs" aria-hidden="true"><p>5</p></i>
+			<i class="fa fa-map-signs" aria-hidden="true"><p>+5</p></i>
 			<p>Países alcanzados.</p>
 		</div>	
 
 		<div data-aos="fade-up"
      data-aos-duration="500"> 	
-			<i class="fa fa-users" aria-hidden="true"><p>35</p></i>
+			<i class="fa fa-users" aria-hidden="true"><p>+20</p></i>
 			<p>Profesionales a tu disposición.</p>
 		</div>	
 		</article>
@@ -370,21 +359,6 @@ Descubre cómo podemos impulsar tu negocio.
 	</div>
 </article>
 
-<!----
-
-<section class="con2" data-aos="zoom-out-left">
-	<h5 id="c">¡Aumenta tus ventas!</h5>
-	<p>
-	Comunícate con nosotros para comenzar a diseñar una estrategia digital orientada a impulsar el crecimiento de tu marca en la web</p>	
-	<div class="contas">
-	<i  class="fa fa-whatsapp"></i>
-		<a  href="https://wa.me/+584243345211">
-	+58 424-334-5211 </a>
-	</div>
-</section>
---->
-
-
 <article class="cite">
 	<section class="lo">
 	
@@ -410,7 +384,8 @@ Descubre cómo podemos impulsar tu negocio.
 		<a href="https://www.facebook.com/IMAgencies/"><i class="fa fa-facebook"></i></a>
 		<a href="https://www.linkedin.com/company/im-agencies/?originalSubdomain=mx"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
 		<a href="https://www.instagram.com/imagencies/"> <i class="fa fa-instagram"></i></a>
-		<i class="fa fa-whatsapp"></i>
+		<a href=""> <i class="fa fa-whatsapp"></i>                       </a>
+		
 
 
 		</ul>
@@ -465,9 +440,9 @@ Descubre cómo podemos impulsar tu negocio.
 	<div class="grupo2-1">
 		
 
-	 	<a href="https://suburbiodeideas.netlify.app"> &copy; 2024 Suburbio de ideas
+	 	<a href="https://suburbiodeideas.netlify.app"> &copy; 2025 - Suburbio de ideas.
 	 	</a>
-	 	<p>Disclaimer : La propiedad inteletual de los sitos usados para el portafolio solo es para inspriracion , los derechos de imagen pertenecen a las entidades  </p>
+	 	<p>Disclaimer : : Los derecho de imagen pertenecen a las entidades, Su uso solo es como complemento a mis practicas.  </p>
 	 </div>
 
 	</div>
